--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 </div>
             </div>
         </div>
-        <div class="cards">
+        <div class="columns">
             <div class="text">
                 <p>
                     Visio is an investment management firm initially founded by Patrice Moyal in 2003. The nimble, highly focused and dynamic team manage assets across listed strategies for a diversified client base that includes some of the world's largest and most sophisticated inverstors.
@@ -42,7 +42,7 @@
                 <img src="https://i.postimg.cc/ZR20py4P/Screenshot-2024-01-11-094155-removebg-preview.png" alt="">
                 <h3>THE VISIO DEFFERENCE</h3>
             </div>
-            <div class="cards">
+            <div class="cards-2">
                 <div class="card-2">
                     <b>HEDGE FUNDS</b>
                     <img src="https://i.postimg.cc/ZR20py4P/Screenshot-2024-01-11-094155-removebg-preview.png" alt="">
