--- a/index.html
+++ b/index.html
@@ -13,8 +13,16 @@
         </nav>
     </header>
     <main>
+
+        <div class="carousel-container">
+            <div class="carousel">
+              <img src="https://i.postimg.cc/kgXwsdPR/24-SUNSET-VIEW-FROM-SUNSET-BEACH-jpg-1366x768-q85-crop-upscale.webp" alt="Image 1">
+              <img src="https://i.postimg.cc/SN4QnXKv/20160608123429-Ocean.jpg" alt="Image 2">
+              <img src="https://i.postimg.cc/W4BkHMG7/scenic-view-of-ocean-during-dawn-3.jpg" alt="Image 3">
+            </div>
+        </div>
+
         <div>
-            <div class="background-slider">
                 <div class="boxes">
                     <div class="left-box">
                         <p><b>LOOK BEYOND THE HORIZON</b></p>
@@ -23,7 +31,6 @@
                         
                     </div>
                 </div>
-            </div>
            
         </div>
         <div class="columns">
@@ -88,5 +95,6 @@
         </div>
     </main>
 </body>
+<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
 <script src="index.js"></script>
 </html>
