--- a/index.html
+++ b/index.html
@@ -9,8 +9,15 @@
 <body>
     <header>
         <nav>
-            
-        </nav>
+            <div class="navbar">
+                <a href="#" class="logo">
+                    <img src="https://i.postimg.cc/0NhY7Kps/Visio-2023-1.png">
+                </a>
+                <a href="#" class="logo-buttn">
+                    <img src="https://i.postimg.cc/50fGdrRy/Screenshot-2024-01-26-145042.png">
+                </a>
+            </div>
+         </nav>
     </header>
     <main>
 
@@ -63,15 +70,15 @@
            <div>
             <div class="card">
                 <img src="https://i.postimg.cc/ZR20py4P/Screenshot-2024-01-11-094155-removebg-preview.png" alt="">
-                <h3>THE VISIO DEFFERENCE</h3>
+                <h3>MEET THE VISIO TEAM</h3>
             </div>
             <div class="cards">
                 <div class="card-2">
-                    <b>HEDGE FUNDS</b>
+                    <b>SEGREGATED MANDATES</b>
                     <img src="https://i.postimg.cc/ZR20py4P/Screenshot-2024-01-11-094155-removebg-preview.png" alt="">
                 </div>
                 <div class="card-2">
-                    <b>UNIT TRUSTS</b>
+                    <b>AFRICA FUNDS</b>
                     <img src="https://i.postimg.cc/ZR20py4P/Screenshot-2024-01-11-094155-removebg-preview.png" alt="">
                 </div>
             </div>
@@ -79,15 +86,15 @@
            <div>
             <div class="card">
                 <img src="https://i.postimg.cc/ZR20py4P/Screenshot-2024-01-11-094155-removebg-preview.png" alt="">
-                <h3>THE VISIO DEFFERENCE</h3>
+                <h3>OUR FUNDS AND INVESTMENTS</h3>
             </div>
             <div class="cards">
                 <div class="card-2">
-                    <b>HEDGE FUNDS</b>
+                    <b>FUND PERFOMANCE</b>
                     <img src="https://i.postimg.cc/ZR20py4P/Screenshot-2024-01-11-094155-removebg-preview.png" alt="">
                 </div>
                 <div class="card-2">
-                    <b>UNIT TRUSTS</b>
+                    <b>RISK MANAGEMENT/b>
                     <img src="https://i.postimg.cc/ZR20py4P/Screenshot-2024-01-11-094155-removebg-preview.png" alt="">
                 </div>
             </div>
