--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                     <img src="https://i.postimg.cc/ZR20py4P/Screenshot-2024-01-11-094155-removebg-preview.png" alt="">
                 </div>
                 <div class="card-2">
-                    <b>RISK MANAGEMENT/b>
+                    <b>RISK MANAGEMENT</b>
                     <img src="https://i.postimg.cc/ZR20py4P/Screenshot-2024-01-11-094155-removebg-preview.png" alt="">
                 </div>
             </div>
