--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
             </div>
         </div>
 
+        <div class="pagination"></div>
+
         <div>
                 <div class="boxes">
                     <div class="left-box">
