--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 </p>
             </div>
             <div class="icons">
-                <img src="./images/Screenshot 2024-01-15 145800.png" alt="pic">
+                <img src="https://i.postimg.cc/RFv214JD/Screenshot-2024-01-15-145800.png" alt="pic">
             </div>
         </div>
         <div class="cards">
