--- a/index.html
+++ b/index.html
@@ -24,9 +24,10 @@
         <section class="slider">
             <div class="carousel-container">
                 <div class="carousel">
-                  <img src="https://i.postimg.cc/kgXwsdPR/24-SUNSET-VIEW-FROM-SUNSET-BEACH-jpg-1366x768-q85-crop-upscale.webp" alt="Image 1">
-                  <img src="https://i.postimg.cc/SN4QnXKv/20160608123429-Ocean.jpg" alt="Image 2">
-                  <img src="https://i.postimg.cc/W4BkHMG7/scenic-view-of-ocean-during-dawn-3.jpg" alt="Image 3">
+                    <img src="https://i.postimg.cc/T2WX90j0/7zx10hr273pb1.jpg" alt="Image 1">
+                    <img src="https://i.postimg.cc/1tLvWp0V/wp7925391.webp" alt="Image 2">
+                    <img src="https://i.postimg.cc/wvKNZFPz/desktop-wallpaper-sunrise-landscape-laptop-artist-and-background.jpg" alt="Image 3">
+                    <img src="https://i.postimg.cc/KY5KpFnP/Dreamy-Pixel-Art-AI-Generated-4-K-Wallpaper-1024x576.webp" alt="Image 4">
                 </div>
                 <div class="pagination"></div>
             </div>
@@ -53,7 +54,7 @@
                 </p>
             </div>
             <div class="icons">
-                <img src="https://i.postimg.cc/RFv214JD/Screenshot-2024-01-15-145800.png" alt="pic">
+                <img src="https://i.postimg.cc/1XvJTQ5g/Screenshot-2024-02-23-132416.png" alt="pic">
             </div>
         </div>
         <div class="cards">
