--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <img src="https://i.postimg.cc/wvKNZFPz/desktop-wallpaper-sunrise-landscape-laptop-artist-and-background.jpg" alt="Image 3">
                     <img src="https://i.postimg.cc/KY5KpFnP/Dreamy-Pixel-Art-AI-Generated-4-K-Wallpaper-1024x576.webp" alt="Image 4">
                 </div>
-                <div class="pagination"></div>
+                <div class="dots-container"></div>
             </div>
             <div>
                 <div class="boxes">
